final report draft (needs another pass)

--- a/report/bib/bibliography.bib
+++ b/report/bib/bibliography.bib
@@ -1,3 +1,21 @@
+@ARTICLE{nsga2,
+  author={Deb, K. and Pratap, A. and Agarwal, S. and Meyarivan, T.},
+  journal={IEEE Transactions on Evolutionary Computation}, 
+  title={A fast and elitist multiobjective genetic algorithm: NSGA-II}, 
+  year={2002},
+  volume={6},
+  number={2},
+  pages={182-197},
+  doi={10.1109/4235.996017}
+}
+
+@misc{gymulator,
+  title = {GitHub repository: gymulator},
+  year = {2024},
+  howpublished = {\url{https://github.com/andrejjocic/gymulator}},
+}
+
+
 @inproceedings{perlin1989hypertexture,
   title={Hypertexture},
   author={Perlin, Ken and Hoffert, Eric M},
