--- a/model/playground.ipynb
+++ b/model/playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,13 +86,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4111fb31a80d4b2c802d3710d64939ae",
+       "model_id": "3bc2fcbfdfc943498389a477bbe2e50c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -111,7 +111,7 @@
     "model_params = {\n",
     "    \"interarrival_time\": {\n",
     "        \"type\": \"SliderInt\",\n",
-    "        \"value\": 2,\n",
+    "        \"value\": 5,\n",
     "        \"label\": \"time between arrivals:\",\n",
     "        \"min\": 1,\n",
     "        \"max\": 50,\n",
@@ -119,7 +119,7 @@
     "    },\n",
     "    \"agent_exercise_duration\": {\n",
     "        \"type\": \"SliderInt\",\n",
-    "        \"value\": 20,\n",
+    "        \"value\": 30,\n",
     "        \"label\": \"mean exercise duration:\",\n",
     "        \"min\": 1,\n",
     "        \"max\": 3 * 60,\n",
@@ -139,7 +139,7 @@
     "        \"step\": 0.05,\n",
     "    }\n",
     "else:\n",
-    "    template = LayoutTemplate.square_isles(isle_rows=2, isle_cols=2)\n",
+    "    template = LayoutTemplate.square_isles(isle_rows=1, isle_cols=2)\n",
     "    model_params[\"layout\"] = template.instantiate([random.choice(list(gym_model.Equipment)) for _ in range(len(template))])\n",
     "    model_params[\"spawn_location\"] = template.entrance\n",
     "\n",
@@ -147,7 +147,7 @@
     "page = JupyterVizGym(\n",
     "    gym_model.Gym,\n",
     "    model_params,\n",
-    "    measures=[\"Congestion\", \"Utilization\"],\n",
+    "    measures=[\"Utilization\"],\n",
     "    name=\"Test gym\",\n",
     "    agent_portrayal=lambda agent: agent.portrayal,\n",
     "    # space_drawer=\"default\",\n",
