--- a/report/report.tex
+++ b/report/report.tex
@@ -58,7 +58,7 @@ Our goal is to offer practical insights for gym owners, managers, and designers 
 % Keywords are not mandatory, but authors are strongly encouraged to provide them. If provided, please include two to five keywords, separated by the pipe symbol, e.g:
 \keywords{gym layout | crowd simulation | gym-goer behaviour | gym traffic}
 \begin{abstract}
-This report describes our work on gym layout optimisation. We begin with a brief overview of the problem and related work, followed by a description of our model and simulation. We conclude with a discussion of our results and future work.
+This report describes our work on simulation-driven gym layout optimisation. We begin with a brief overview of the problem, followed by a description of our agent-based model of gym-goer behaviour. Next, we describe a constrained multi-objective optimisation procedure for finding optimal gym layouts with genetic algorithms, and present some preliminary results. We conclude with a discussion of our solution's limitations and possible future work.
 \end{abstract}
 
 \dates{\textbf{\today}}
